[gd_scene load_steps=32 format=2]

[ext_resource path="res://Portal.gd" type="Script" id=1]
[ext_resource path="res://Demon.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/portal/idle/portal_idle_frame_0.png" type="Texture" id=3]
[ext_resource path="res://art/portal/idle/portal_idle_frame_1.png" type="Texture" id=4]
[ext_resource path="res://art/portal/idle/portal_idle_frame_2.png" type="Texture" id=5]
[ext_resource path="res://art/portal/idle/portal_idle_frame_3.png" type="Texture" id=6]
[ext_resource path="res://art/portal/idle/portal_idle_frame_4.png" type="Texture" id=7]
[ext_resource path="res://art/portal/idle/portal_idle_frame_5.png" type="Texture" id=8]
[ext_resource path="res://art/portal/idle/portal_idle_frame_6.png" type="Texture" id=9]
[ext_resource path="res://art/portal/idle/portal_idle_frame_7.png" type="Texture" id=10]
[ext_resource path="res://art/portal/idle/portal_idle_frame_8.png" type="Texture" id=11]
[ext_resource path="res://art/portal/idle/portal_idle_frame_9.png" type="Texture" id=12]
[ext_resource path="res://art/portal/idle/portal_idle_frame_10.png" type="Texture" id=13]
[ext_resource path="res://art/portal/idle/portal_idle_frame_11.png" type="Texture" id=14]
[ext_resource path="res://art/portal/appear/portal_appear_frame_15.png" type="Texture" id=15]
[ext_resource path="res://art/portal/appear/portal_appear_frame_14.png" type="Texture" id=16]
[ext_resource path="res://art/portal/appear/portal_appear_frame_13.png" type="Texture" id=17]
[ext_resource path="res://art/portal/appear/portal_appear_frame_12.png" type="Texture" id=18]
[ext_resource path="res://art/portal/appear/portal_appear_frame_11.png" type="Texture" id=19]
[ext_resource path="res://art/portal/appear/portal_appear_frame_10.png" type="Texture" id=20]
[ext_resource path="res://art/portal/appear/portal_appear_frame_9.png" type="Texture" id=21]
[ext_resource path="res://art/portal/appear/portal_appear_frame_8.png" type="Texture" id=22]
[ext_resource path="res://art/portal/appear/portal_appear_frame_7.png" type="Texture" id=23]
[ext_resource path="res://art/portal/appear/portal_appear_frame_6.png" type="Texture" id=24]
[ext_resource path="res://art/portal/appear/portal_appear_frame_5.png" type="Texture" id=25]
[ext_resource path="res://art/portal/appear/portal_appear_frame_4.png" type="Texture" id=26]
[ext_resource path="res://art/portal/appear/portal_appear_frame_3.png" type="Texture" id=27]
[ext_resource path="res://art/portal/appear/portal_appear_frame_2.png" type="Texture" id=28]
[ext_resource path="res://art/portal/appear/portal_appear_frame_1.png" type="Texture" id=29]
[ext_resource path="res://art/portal/appear/portal_appear_frame_0.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "work",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "remove",
"speed": 20.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "create",
"speed": 20.0
} ]

[node name="Portal" type="Node2D"]

script = ExtResource( 1 )
Demon = ExtResource( 2 )
count = 5
rotated_right = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "create"

[node name="SpawnTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]


